# regen-registry-review-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  Makefile  PARALLEL_BLOCKERS_DIAGRAM.md  PARALLEL_TEST_ANALYSIS.md  PARALLEL_TEST_SUMMARY.md  QUICK_START_OPTIMIZATION.md  README.md  REFACTORING_ROADMAP.md  ROADMAP.md  TEST_OPTIMIZATION_CHECKLIST.md  USAGE.md  chatgpt_rest_api.py  check_pcie_slots.sh  check_ram.sh  coverage.json  ecosystem.config.cjs  install-systemd-service.sh  parallel_analysis.json  playwright-workflow-test.js  playwright-workflow-test.mjs  pyproject.toml  pytest.ini  samsung_990_pro_migration_guide.md  setup_secondary_drive.sh  setup_secondary_drive_v2.sh  test_e2e_workflow.py  verify_workflow.py
.claude/agents/: becca.md  engineer.md  mcp-expert.md
.claude/journal/: 2025-11-12-PROMPT_DESIGN_PRINCIPLES.md  2025-11-13-TEST_COST_OPTIMIZATION.md  2025-11-17-CODE_QUALITY_REVIEW.md  2025-11-17-PRIORITIZED_ACTION_PLAN.md  2025-11-17-REFACTORING_ACTION_PLAN.md  2025-11-19-ELIZA_INTEGRATION_GUIDE.md  2025-11-19-REGISTRY_MCP_UPLOAD_SPEC.md  2025-11-20-AGENT_TESTING_PROTECTION.md  2025-11-20-CAPABILITIES.md  2025-11-20-CONTRIBUTING.md  2025-11-20-EIGHT_STAGE_REFACTOR_COMPLETE.md  2025-11-20-EIGHT_STAGE_REFACTOR_FINAL_CHECKLIST.md  2025-11-20-EIGHT_STAGE_REFACTOR_TESTS_UPDATE.md  2025-11-20-EIGHT_STAGE_TESTING_RESULTS.md  2025-11-20-IMPLEMENTATION_SUMMARY.md  2025-11-20-OPTIMIZATION_SUMMARY.md  2025-11-20-PERFORMANCE_OPTIMIZATION_REPORT.md  2025-11-20-PHASE3_SUMMARY.md  2025-11-20-PHASE_2_COMPLETION.md  2025-11-20-PHASE_4_COMPLETION.md  2025-11-20-REDUCTION_IMPLEMENTATION_GUIDE.md  2025-11-20-TESTING_GUIDE.md  2025-11-20-TESTING_QUICK_REFERENCE.md  2025-11-20-TESTING_SPEED_IMPLEMENTATION.md  2025-11-20-TESTING_SPEED_RESULTS.md  2025-11-20-TESTING_SPEED_STRATEGY.md  2025-11-20-TEST_OPTIMIZATION_SUMMARY.md  2025-11-20-TEST_SUITE_OPTIMIZATION_REPORT.md  2025-11-20-UX_ANALYSIS_SUMMARY.md  2025-11-20-UX_VISUAL_GUIDE.md
.claude/skills/mcp-architect/templates/: Dockerfile  advanced-server.py  minimal-server.py  pyproject.toml  test-template.py
.claude/strategy/: README.md  ROADMAP.md  STATUS.md
.github/workflows/: ci.yml  nightly.yml  regression.yml  release.yml
backlog/: README.md  config.yml
backlog/completed/: task-011 - Fixed tmp document storage.md  task-28 - Environment-level-test-isolation.md  task-29 - Immutable-settings-after-initialization.md  task-30 - Production-path-deletion-guard.md  task-31 - Module-import-path-enforcement.md  task-32 - Test-isolation-audit-and-hardening.md  task-7 - Improve-citation-page-number-precision.md
backlog/tasks/: task-1 - Implement-Human-Review-stage-(Stage-7).md  task-10 - Add-provenance-section-to-reports.md  task-11 - Add-report-version-tracking.md  task-12 - Add-requirement-override-and-annotation-tools.md  task-13 - Add-revision-request-workflow.md  task-14 - Add-final-determination-capture.md  task-15 - Add-change-tracking-with-audit-trail.md  task-16 - Add-report-locking-mechanism.md  task-17 - Add-session-archival-functionality.md  task-17 - Evidence-extraction-prompts-user-for-matrix-view.md  (+22 more)
docs/: 2026-01-26-registry-agent-feedback-implementation-report.md  BASELINE_METRICS.md  BUG_FIXES_2025-11-14.md  BUG_FIX_2025-11-17_list_example_projects.md  CACHING.md  CODE_REVIEW_INITIALIZATION.md  CRITICAL_BUGS_FOUND.md  DEVELOPMENT_SESSION_2025-11-17.md  EIGHT_STAGE_BUGFIX_COMPLETE.md  EIGHT_STAGE_REFACTOR_ANALYSIS.md  EIGHT_STAGE_REFACTOR_PHASE4_COMPLETE.md  ENV_CONFIGURATION.md  EXPENSIVE_TEST_ANALYSIS.md  EXPENSIVE_TEST_FINAL_REPORT.md  EXPENSIVE_TEST_IMPLEMENTATION_COMPLETE.md  EXPENSIVE_TEST_STRATEGY.md  FILENAME_EXTRACTION_ENHANCEMENT_2025-11-17.md  IMPLEMENTATION_STATUS.md  INTELLIGENCE_ENHANCEMENT_STRATEGY_2025-11-17.md  MARKER_IMPLEMENTATION_COMPLETE_2025-11-17.md  MARKER_INTEGRATION_ANALYSIS_2025-11-17.md  P0_SPRINT_SUMMARY.md  PHASE_3_COMPLETION.md  PHASE_4.2_COMPLETION_SUMMARY.md  PHASE_4_PLAN.md  QUICK_REFERENCE_IMPROVEMENTS.md  README_REVIEWS.md  REDUCTION_ARCHITECTURE_DIAGRAM.md  REGISTRY_MCP_UPLOAD_ADDENDUM.md  RELEASING.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-11-15.md  SHAREPOINT_INTEGRATION.md  STATE_MACHINE_ANALYSIS.md  TESTING_QUICK_REFERENCE.md  TEST_METRICS_REPORT.md  TEST_OPTIMIZATION_COMPLETE.md  TEST_OPTIMIZATION_ROADMAP.md  UX_ANALYSIS.md  UX_ANALYSIS_INDEX.md  (+8 more)
examples/: checklist.docx  checklist.md
logs/: pm2-error.log.1  pm2-out.log.1  rest-api.log.1
scripts/: analyze_test_costs.py  check_duplicate_models.py  setup_gdrive_test_folder.py  validate_phase4_extraction.py
specs/: 2025-11-11-registry-review-mcp-server-FEEDBACK.md  2025-11-11-registry-review-mcp-server.md  2025-11-12-phase-4.2-llm-native-field-extraction-REVISED.md  2025-11-12-registry-review-mcp-REFINED.md  2026-01-12-registry-assistant-forum-post.md  workflow-state-and-error-handling.md
tests/: botany_farm_ground_truth.json  conftest.py  factories.py  test_botany_farm_accuracy.py  test_citation_verification.py  test_cli_backend.py  test_common_utilities.py  test_cost_tracking.py  test_cross_validate_llm_integration.py  test_document_processing.py  test_error_propagation.py  test_evidence_extraction.py  test_infrastructure.py  test_initialize_workflow.py  test_integration_full_workflow.py  test_llm_client.py  test_llm_extraction.py  test_llm_extraction_integration.py  test_llm_json_validation.py  test_llm_throttle.py  test_locking.py  test_marker_integration.py  test_marker_real.py  test_metadata_extraction.py  test_multi_project.py  test_ocr_fallback.py  test_pdf_char_cap.py  test_phase4_validation.py  test_prior_review_detection.py  test_project_id_filtering.py  test_prompt_budget.py  test_prompt_tuning_calibration.py  test_report_generation.py  test_rest_integration.py  test_reviewer_preview.py  test_smoke.py  test_tenure_and_project_id_extraction.py  test_unified_analysis_schema.py  test_upload_tools.py  test_user_experience.py  (+5 more)
web_app/: .env.example  .env.production  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+425 files in other folders)
