[project]
name = "registry-review-mcp"
version = "2.5.0"
description = "MCP server for automating carbon credit project registry reviews"
readme = "README.md"
authors = [
    { name = "Shawn Anderson", email = "shawn@longtailfinancial.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.21.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.11.0",
    "python-dateutil>=2.8.0",
    "fiona>=1.9.0",
    "structlog>=24.0.0",
    "pydantic-settings>=2.12.0",
    "anthropic>=0.40.0",
    "rapidfuzz>=3.14.3",
    "marker-pdf>=0.2.17",
    "psutil>=5.9.0",
    "pymupdf4llm>=0.2.0",
    "python-docx>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
    "openai>=1.0.0",
    # Phase F6 — reviewer preview uses Jinja2 directly for templating.
    # Previously a transitive dep (via fastapi); pinned now so the reviewer
    # package is not at the mercy of upstream dep-pruning.
    "jinja2>=3.1.0",
]

[project.scripts]
registry-review-mcp = "registry_review_mcp.server:main"

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry_review_mcp"]
# Phase F6 — include the reviewer's Jinja2 template (non-Python file) so
# pip-installed wheels carry it alongside preview.py. Hatchling by default
# packages only Python files under a package path.
force-include = { "src/registry_review_mcp/reviewer/templates" = "registry_review_mcp/reviewer/templates" }

[tool.hatch.build.targets.sdist]
include = [
    "src/registry_review_mcp",
    "README.md",
    "CHANGELOG.md",
    "CAPABILITIES.md",
    "pyproject.toml",
]

[tool.uv]
exclude-newer = "2025-11-12T00:00:00Z"

[tool.ruff]
line-length = 120
target-version = "py310"
# Phase F — scope ruff to the source tree. Tests and top-level legacy
# scripts (chatgpt_rest_api.py, upload helpers, verify_workflow.py, a
# handful of ad-hoc Phase B test harnesses) carry historical debt that is
# orthogonal to the registry-review pipeline; they can be cleaned in a
# dedicated Phase G hygiene sweep without gating release velocity. The CI
# workflow explicitly scopes ``ruff check`` to ``src/`` for the same
# reason.
extend-exclude = [
    ".venv",
    "chatgpt_rest_api.py",
    "verify_workflow.py",
    "uploaded_files",
    "sessions",
    "tests/test_phase4_validation.py",
]

[tool.ruff.lint]
# E501 is intentionally not in the default select. Long lines are frequently
# prompt templates and URLs that are clearer unbroken. Correctness codes
# (E7xx, F-series) remain enforced.
select = ["E", "F", "I"]
ignore = [
    "E501",  # line length — see rationale above
    "E402",  # module-level import not at top — prompt modules use late imports
    "F541",  # f-string without placeholders — intentional for readability
    "F841",  # unused local variable — eight pre-existing occurrences in legacy
             # helpers; Phase G should do a dedicated hygiene pass rather than
             # gate Phase F release on mechanical cleanups.
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"src.registry_review_mcp".msg = "Import from 'registry_review_mcp', not 'src.registry_review_mcp'. The 'src.' prefix creates a separate module singleton."

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
