# MCP Server Project Configuration
# Optimized for UV package manager

[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Production-ready MCP server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}

# Core dependencies
dependencies = [
    "mcp>=1.0.0",           # Official MCP SDK
    "httpx>=0.27.0",        # Async HTTP client
    "pydantic>=2.0.0",      # Data validation
]

# Optional dependencies for specific features
[project.optional-dependencies]
cli = ["mcp[cli]"]          # MCP CLI tools
rich = ["rich>=13.0.0"]     # Rich terminal output
db = [
    "sqlalchemy>=2.0.0",    # Database ORM
    "asyncpg>=0.29.0"       # PostgreSQL async driver
]

# Entry point for running the server
[project.scripts]
mcp-server = "mcp_server.__main__:main"

# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# UV-specific configuration
[tool.uv]
# Development dependencies (not included in production)
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
]

# Python version management
# Create .python-version file with: echo "3.11" > .python-version

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=mcp_server",
    "--cov-report=term-missing",
]

# Ruff linting and formatting
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy type checking
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true

# Coverage configuration
[tool.coverage.run]
source = ["mcp_server"]
omit = ["tests/*", "**/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Project structure expected:
#
# mcp-server-template/
# ├── .python-version          # Pin Python version (e.g., "3.11")
# ├── pyproject.toml          # This file
# ├── uv.lock                 # Dependency lockfile (committed)
# ├── README.md
# ├── .gitignore
# ├── src/
# │   └── mcp_server/
# │       ├── __init__.py
# │       ├── __main__.py     # Entry point
# │       └── server.py       # MCP server implementation
# └── tests/
#     ├── __init__.py
#     └── test_server.py

# Common UV commands:
#
# uv add package-name          # Add dependency
# uv add --dev package-name    # Add dev dependency
# uv remove package-name       # Remove dependency
# uv sync                      # Install dependencies
# uv lock --upgrade            # Update lockfile
# uv run python -m mcp_server  # Run server
# uv run pytest                # Run tests
# uv run ruff check .          # Lint code
# uv run ruff format .         # Format code
# uv run mypy src/             # Type check
